# AgentGate

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.github/: FUNDING.yml
crates/agentgate-cli/: Cargo.toml
crates/agentgate-cli/src/: main.rs
crates/agentgate-core/: Cargo.toml
crates/agentgate-core/src/: config.rs  lib.rs  metrics.rs
crates/agentgate-core/src/dashboard/: mod.rs  server.rs  state.rs  ws.rs
crates/agentgate-core/src/policy/: condition.rs  engine.rs  mod.rs  rules.rs
crates/agentgate-core/src/protocol/: jsonrpc.rs
crates/agentgate-core/src/proxy/: evaluation.rs  http.rs  mod.rs  sse.rs  stdio.rs
crates/agentgate-core/src/ratelimit/: circuit_breaker.rs  limiter.rs  mod.rs  token_bucket.rs
crates/agentgate-core/src/storage/: sqlite.rs
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/activity/: page.tsx
dashboard/src/app/analytics/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/: TokenGate.tsx
dashboard/src/lib/: api.ts  auth.ts
dashboards/: grafana.json
policies/: default.toml
policies/examples/: 01-no-shell-escape.toml  02-no-network-exfil.toml  03-production-readonly.toml  04-redact-pii.toml  05-api-throttle.toml  06-no-sensitive-paths.toml  07-business-hours-only.toml  08-redact-api-keys.toml  09-allow-list.toml  10-defence-in-depth.toml
tests/integration/: http_proxy_test.rs
