[workspace]
members = [
    "crates/agentgate-core",
    "crates/agentgate-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tabled = "0.17"
regex = "1"
axum = "0.7"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
futures-util = "0.3"
tokio-stream = "0.1"
prometheus = { version = "0.13", default-features = false }
